--- a/TestModule/TestModule.vcxproj.filters
+++ b/TestModule/TestModule.vcxproj.filters
@@ -51,7 +51,7 @@
     <CustomBuild Include="..\TestORB\idl\Union.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
-    <CustomBuild Include="..\TestORB\idl\NestedStruct.idl">
+    <CustomBuild Include="..\TestORB\idl\RecursiveStruct.idl">
       <Filter>IDL</Filter>
     </CustomBuild>
   </ItemGroup>
@@ -146,16 +146,16 @@
     <ClCompile Include="..\TestORB\module\ImplV3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\TestORB\module\IDL\NestedStruct.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
-    <ClCompile Include="..\TestORB\module\IDL\NestedStruct_p.cpp">
-      <Filter>Generated</Filter>
-    </ClCompile>
     <ClCompile Include="..\TestORB\module\IDL\Union.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
     <ClCompile Include="..\TestORB\module\IDL\Union_p.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\module\IDL\RecursiveStruct.cpp">
+      <Filter>Generated</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestORB\module\IDL\RecursiveStruct_p.cpp">
       <Filter>Generated</Filter>
     </ClCompile>
   </ItemGroup>
@@ -259,16 +259,16 @@
     <ClInclude Include="..\TestORB\include\I2_factory_impl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\TestORB\module\IDL\NestedStruct.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
-    <ClInclude Include="..\TestORB\module\IDL\NestedStruct_s.h">
-      <Filter>Generated</Filter>
-    </ClInclude>
     <ClInclude Include="..\TestORB\module\IDL\Union.h">
       <Filter>Generated</Filter>
     </ClInclude>
     <ClInclude Include="..\TestORB\module\IDL\Union_s.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\IDL\RecursiveStruct.h">
+      <Filter>Generated</Filter>
+    </ClInclude>
+    <ClInclude Include="..\TestORB\module\IDL\RecursiveStruct_s.h">
       <Filter>Generated</Filter>
     </ClInclude>
   </ItemGroup>
